--- a/second-page.html
+++ b/second-page.html
@@ -66,7 +66,7 @@
             <head>
                 <nav>
                    <ul>
-                        <li><a style="color: white" href="MainWebPage.html">Go Back To Main Page</a></li>
+                        <li><a style="color: white" href="index.html">Go Back To Main Page</a></li>
                    </ul>
                 </nav>
             </head>
